Fix validation errors

--- a/css/main.css
+++ b/css/main.css
@@ -15,3 +15,11 @@ nav ul {
 .wrapper {
   background-color: #eee8d5
 }
+
+#contents, #favs, #facts, #types {
+  color: #93a1a1
+}
+
+.wrapper {
+  background-color: #b58900
+}
