--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,16 @@
+html {
+  box-sizing: border-box;
+  background-color: #fff;
+  font-family: Gerogia,sans-serif;
+  line-height: 1.5;
+  }
+
+  *,
+  *::before,
+  *::after {
+    box-sizing: inherit;
+  }
+
 body {
   background-color: #fdf6e3;
 }
