--- a/css/main.css
+++ b/css/main.css
@@ -26,11 +26,11 @@ nav ul {
   text-transform: uppercase;
 }
 .wrapper {
-  background-color: #eee8d5
+  background-color: #eee8d5;
 }
 
 #contents, #favs, #facts, #types {
-  color: #93a1a1
+  color: #93a1a1;
 }
 
 .wrapper > .dfn {
