--- a/css/main.css
+++ b/css/main.css
@@ -44,6 +44,11 @@ nav ul {
 a:not(.no-highlight) {
   background-color: #719e07;
 }
-a:link rel"external" {
+[rel="external"] {
   background-color: #2694d8;
+}
+
+ul > li:target {
+  color: #2aa198;
+
 }
