--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,10 @@ a:not(.no-highlight) {
   background-color: #2694d8;
 }
 
-ul > li:target {
-  color: #2aa198;
+li:first-child > ol {
+  color: #719e47;
 
+}
+ul:last-child > li:target {
+  color: #2aa198;
 }
