--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,7 @@ nav > ul {
 .logo {
   text-transform: uppercase;
 }
+
 .wrapper {
   background-color: #eee8d5;
 }
@@ -37,7 +38,7 @@ nav > ul {
   background-color: #b58900;
 }
 
-.dfn p + strong {
+.dfn + p strong {
   color: #fff;
 }
 
