--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 html {
   box-sizing: border-box;
   background-color: #fff;
-  font-family: Georgia, sans-serif;
+  font-family: "Georgia", sans-serif;
   line-height: 1.5;
 }
 
