--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,5 @@
 html {
   box-sizing: border-box;
-  background-color: #fff;
-  font-family: Georgia, sans-serif;
-  line-height: 1.5rem;
 }
 
 *,
@@ -15,11 +12,12 @@ body {
   background-color: #fdf6e3;
 }
 
-header + footer {
+header,
+footer {
   font-size: 1.5rem;
 }
 
-nav > ul {
+nav ul {
   font-family: sans-serif;
 }
 
@@ -51,22 +49,22 @@ a:not(.no-highlight) {
   background-color: #2694d8;
 }
 
-li ol:first-child {
+ol li:first-child {
   color: #719e47;
 }
 
-ul li:last-child {
+ol li:last-child {
   color: #2aa198;
 }
 
-li:nth-child(odd) > .types {
+.types li:nth-child(odd) {
   background-color: #657ba3;
 }
 
-li:nth-child(even) > .types {
+.types li:nth-child(even) {
   background-color: #586e75;
 }
 
-li:nth-child(3) .types {
+.types li:nth-child(3) {
   background-color: #d04b16;
 }
